Feature/#83/create team page (#116)
* EDIT: #83 create_team 작업을 위한 일부 수정

Edit: select option 아이탬을 enum, db에서 읽어서 가져오도록 수정
Add: Project, locaton enum value를 가져오는 service 추가
Edit: listview item location 비교 대치에서 getName()으로 교체
Add: create_team page에 team_detail modal 추가

* Edit: gitignore .gz 파일 무시

* Add: #83 createTeam page 구현

Edit: create_team의 modal창추가 설정 및 일부 내용 변경
Edit: TeamUpdateRequset에서 projectId를 받는 것으로 변경
Edit: TeamLocation [NONE] 상태를 최상단으로 이동
Edit: TeamResponseDto에서 project를 object로 받기 때문에 이를 수정
Edit: createTeam service에서 member 조건을 재설정(해당 팀의 member
	        가 아닌 경우에만 생성가능)
Edit: checkTimeVaild 에서 기존 시간과 새로운 시간의 범위유효성 검사 추가

* Add : #83 스케줄 생성, 삭제 Page 구현

Add: 내가 생성한 스케줄page 구현
Add: set_time, delete_time 후 홈 화면이동에서 기존 페이지로 이동으로 변경

--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -39,13 +39,8 @@
             <tbody>
             <tr th:each="team : ${teams}">
                 <th scope="row" th:text="${team.teamId}">ID</th>
-                <td th:text="${team.projectName}">ProjectName</td>
-                <td>
-                    <span th:if="${team.location.toString().equals('GAEPO')}">개포</span>
-                    <span th:if="${team.location.toString().equals('SEOCHO')}">서초</span>
-                    <span th:if="${team.location.toString().equals('ONLINE')}">온라인</span>
-                    <span th:if="${team.location.toString().equals('NONE')}">상관없음</span>
-                </td>
+                <td th:text="${team.project.getName()}">ProjectName</td>
+                <td th:text="${team.location.getName()}"></td>
                 <td th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</td>
                 <td>
                     <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
