수정: thymeleaf 월/일 로 출력되도록 변경

--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -41,7 +41,7 @@
                 <th scope="row" th:text="${team.teamId}">ID</th>
                 <td th:text="${team.project.getName()}">ProjectName</td>
                 <td th:text="${team.location.getName()}"></td>
-                <td th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</td>
+                <td th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</td>
                 <td>
                     <span th:text="${#temporals.format(team.startTime, 'HH:mm')}">시작시간</span>
                     ~
