--- a/src/main/resources/templates/set_time.html
+++ b/src/main/resources/templates/set_time.html
@@ -117,7 +117,7 @@
                 <td th:text="${team.maxMemberCount} == 0 ? '상관 없음' : ${team.maxMemberCount}">3</td>
                 <td>
                     <div th:if="${team.startTime} AND ${team.endTime}">
-                        <span th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</span>
+                        <span th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</span>
                     </div>
                     <div th:if="${team.startTime} == null OR ${team.endTime} == null" th:text="상관없음"></div>
                 </td>
