Add: #135 member join out 기능 구현

--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -101,7 +101,7 @@
                 <td th:text="${team.maxMemberCount} == 0 ? '상관 없음' : ${team.maxMemberCount}">3</td>
                 <td>
                     <div th:if="${team.startTime} AND ${team.endTime}">
-                        <span th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</span>
+                        <span th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</span>
                     </div>
                     <div th:if="${team.startTime} == null OR ${team.endTime} == null" th:text="상관없음"></div>
                 </td>
@@ -166,6 +166,7 @@
     <script>
         var lang = "ko-KR";
         var year = 2018;
+        var locations = "[[${locations}]]"
 
         function timeToTS(date) {
             return date.valueOf();
@@ -179,6 +180,7 @@
 
 
         function onclick_detail(team, loc_id) {
+            console.log(locations)
             var detail_modal = new bootstrap.Modal(document.getElementById('team_detail_modal'))
             detail_modal.show();
             $("#input_time_range_slider").ionRangeSlider({
