--- a/src/main/resources/templates/set_time.html
+++ b/src/main/resources/templates/set_time.html
@@ -117,7 +117,7 @@
                 <td th:text="${team.maxMemberCount} == 0 ? '상관 없음' : ${team.maxMemberCount}">3</td>
                 <td>
                     <div th:if="${team.startTime} AND ${team.endTime}">
-                        <span th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</span>
+                        <span th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</span>
                     </div>
                     <div th:if="${team.startTime} == null OR ${team.endTime} == null" th:text="상관없음"></div>
                 </td>
@@ -196,8 +196,8 @@
             skin: "round",
             type: "double",
             grid: true,
-            min: timeToTS(new Date(2020, 1, 1, 0, 0, 0)),
-            max: timeToTS(new Date(2020, 1, 1, 24, 0, 0)),
+            min: timeToTS(new Date(2020, 1, 1, 0, 0, 1)),
+            max: timeToTS(new Date(2020, 1, 2, 24, 0, 0)),
             from: timeToTS(new Date(2020, 1, 1, 9, 0, 0)),
             to: timeToTS(new Date(2020, 1, 1, 18, 0, 0)),
             step: 900000,
