--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -101,7 +101,7 @@
                 <td th:text="${team.maxMemberCount} == 0 ? '상관 없음' : ${team.maxMemberCount}">3</td>
                 <td>
                     <div th:if="${team.startTime} AND ${team.endTime}">
-                        <span th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</span>
+                        <span th:text="${#temporals.format(team.startTime, 'MM/dd')}">날짜</span>
                     </div>
                     <div th:if="${team.startTime} == null OR ${team.endTime} == null" th:text="상관없음"></div>
                 </td>
@@ -180,7 +180,6 @@
 
 
         function onclick_detail(team, loc_id) {
-            console.log(locations)
             var detail_modal = new bootstrap.Modal(document.getElementById('team_detail_modal'))
             detail_modal.show();
             $("#input_time_range_slider").ionRangeSlider({
@@ -244,7 +243,6 @@
                     dataType: "JSON",
                     contentType: 'application/json',
                     success: (data) => {
-                        console.log(data);
                         if (data.statusCode != 200) {
                             alert("팀 생성에 실패했습니다.\n" + data.message);
                         } else {
