--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -56,7 +56,7 @@
                           th:text="${team.getNicknameByMentor()}">멘토</span>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-primary">참여하기</button>
+                    <button type="button" class="btn btn-primary" th:onclick="onclick_join([[${team}]])">참여하기</button>
                 </td>
             </tr>
             </tbody>
@@ -89,5 +89,33 @@
         </nav>
     </div>
 
+</div>
+<div layout:fragment="custom-footer">
+    <!--jQuery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        function onclick_join(team) {
+            $.ajax({
+                    type: "POST",
+                    url: "./api/v1/team/" + team.teamId + "/join",
+                    data: null,
+                    dataType: "JSON",
+                    contentType: 'application/json',
+                    success: (data) => {
+                        if (data.statusCode != 200) {
+                            alert("참여에 실패했습니다.\n" + data.message);
+                        } else {
+                            alert("참여되었습니다.")
+                            window.location.href = '/list_team';
+                        }
+                    },
+                    error: (request, status, error) => {
+                        alert("참여에 실패했습니다.\n" + request.status + "\nmessage: "
+                            + request.responseText + "\nerror:" + error);
+                    }
+                }
+            )
+        }
+    </script>
 </div>
 </html>
