EDIT: #123 bootstrap cdn으로 가져오기
Delete: 기존 bootstrap 5.0.1v 저장 삭제
Edit : bootstrap cdn 로드 5.0.2v

--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -23,7 +23,9 @@
         </div>
         <!-- Copyright -->
     </div>
-    <script th:src="@{js/bootstrap.js}"></script>
-    <script th:src="@{js/bootstrap.bundle.js}"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </footer>
 </html>
