--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -5,7 +5,10 @@
     <th:block th:fragment="fragment-head" class="head">
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
         <!-- bootstrap-->
-        <link th:rel="stylesheet" th:href="@{/css/bootstrap.css}">
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     </th:block>
