추가: #132 더보기 버튼 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,6 +123,9 @@
                 </tr>
                 </tbody>
             </table>
+            <div class="text-center mb-5">
+                <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">팀 더보기</button>
+            </div>
 
         </div>
 
