--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -12,12 +12,14 @@
 
 <div layout:fragment="custom-content">
     <!-- Modal -->
-    <div class="modal fade" id="team_detail_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="team_detail_modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">시간 설정</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <h2> 시간 설정 </h2>
@@ -52,7 +54,8 @@
                             <div class="col-6">
                                 <div class="mb-3">
                                     <label for="input_max_member_count" class="form-label">참여 인원</label>
-                                    <input class="form-control" id="input_max_member_count" th:type="number" th:min="2"
+                                    <input class="form-control" id="input_max_member_count" th:type="number"
+                                           th:min="2"
                                            required readonly>
                                 </div>
                             </div>
@@ -69,6 +72,11 @@
                             </div>
                         </div>
                     </form>
+                    <div class="members_in_team">
+                        <h5>현재 멘티 목록</h5>
+                        <ul class="member_list list-group">
+                        </ul>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
@@ -139,13 +147,16 @@
                 <li class="page-item"
                     th:each="offset: ${#numbers.sequence(start, end)}"
                     th:classappend="${offset == teams.number + 1} ? 'active'">
-                    <a class="page-link" th:href="@{/create_team?(offset=${offset - 1})}" th:text="${offset}"></a>
+                    <a class="page-link" th:href="@{/create_team?(offset=${offset - 1})}"
+                       th:text="${offset}"></a>
                 </li>
                 <li th:if="${end < teams.totalPages}" class="page-item">
-                    <a class="page-link" th:href="@{/create_team?(offset=${start + maxPage - 1})}" th:text="'>'"></a>
+                    <a class="page-link" th:href="@{/create_team?(offset=${start + maxPage - 1})}"
+                       th:text="'>'"></a>
                 </li>
                 <li th:if="${end < teams.totalPages}" class="page-item">
-                    <a class="page-link" th:href="@{/create_team?(offset=${teams.totalPages - 1})}" th:text="'>>'"></a>
+                    <a class="page-link" th:href="@{/create_team?(offset=${teams.totalPages - 1})}"
+                       th:text="'>>'"></a>
                 </li>
             </ul>
         </nav>
@@ -158,7 +169,8 @@
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--Plugin JavaScript file-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
     <!--datepicker plugin-->
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <!--Moment plugin-->
@@ -177,7 +189,6 @@
 
             return d.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit', hour12: true});
         }
-
 
         function onclick_detail(team, loc_id) {
             var detail_modal = new bootstrap.Modal(document.getElementById('team_detail_modal'))
@@ -199,6 +210,12 @@
 
             const selected_opt_location = $("#select_location option[value='" + loc_id + "']");
             selected_opt_location.attr("selected", "selected");
+
+            const $memberList = $('.member_list');
+            $memberList.empty();
+            team.members.forEach((member) => $memberList.append(
+                '<li class="list-group-item">' + member.nickname + '</li>'))
+
             if (loc_id == 0) { // Enum TeamLocation NONE id
                 $('#select_location').removeAttr('disabled');
             }
