--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -11,6 +11,12 @@
 </head>
 
 <div layout:fragment="custom-content">
+    <div class="page_title">
+        <h2>팀 만들기</h2>
+        <p>멘토가 정해지지 않은 멘토링 팀을 조회 합니다. 세부사항을 확인하고 멘토로써 참여할 수 있습니다.<br/>
+            멘토로 참여하게 되면 팀이 성사됩니다.</p>
+    </div>
+    <hr/>
     <!-- Modal -->
     <div class="modal fade" id="team_detail_modal" tabindex="-1" aria-labelledby="exampleModalLabel"
          aria-hidden="true">
