--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,8 +66,11 @@
         <div class="p-3 mt-3 border rounded bg-secondary bg-gradient">
             <!--                <div class="d-flex flex-wrap">-->
             <div class="row">
-
-
+                <div th:if="${myTeams.getTotalElements()} == 0" class="text-center m-3">
+                    <h2 class="text-light">지금 팀을 만들고 멘토링에 참여해보세요!</h2>
+                    <button type="button" class="btn btn-primary" onclick="location.href='/set_time'">멘토링 만들기</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='/list_team'">멘토링 참여하기</button>
+                </div>
                 <div th:each="team : ${myTeams}" class="col-lg-3 col-md-4 col-sm-6 card m-3">
                     <div class="card-body text-center">
                         <h5 th:text="${team.project.getName()}" class="card-title">Project Title</h5>
@@ -81,6 +84,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <hr/>
