--- a/src/main/resources/templates/list_team.html
+++ b/src/main/resources/templates/list_team.html
@@ -8,7 +8,13 @@
 </head>
 
 <div layout:fragment="custom-content">
-    <h2> 매칭된 팀 목록 </h2>
+    <div class="page_title">
+        <h2>팀 목록</h2>
+        <p>모든 멘토링 팀 목록을 조회합니다.<br/>
+            조회된 목록에서 참여하거나 멘토링 팀 탈퇴를 할 수 있습니다.</p>
+    </div>
+    <hr/>
+    <h2>팀 목록 확인하고 참여하기</h2>
 
     <div class="inquery">
         <div class="row">
